[gd_scene load_steps=7 format=3 uid="uid://it8ndx023c2b"]

[ext_resource type="Script" path="res://EditQuestionProject/scripts_EditQuestionProject/single_page_of_questions.gd" id="1_75lnj"]
[ext_resource type="PackedScene" uid="uid://v4tae3cyiar" path="res://EditQuestionProject/scenes_EditQuestionProject/single_entry.tscn" id="1_dlrke"]
[ext_resource type="PackedScene" uid="uid://bdjfwsw8pmg1m" path="res://EditQuestionProject/scenes_EditQuestionProject/page_navigation.tscn" id="2_ce1rw"]
[ext_resource type="Script" path="res://EditQuestionProject/scripts_EditQuestionProject/single_entry_1.gd" id="2_gmfig"]
[ext_resource type="Script" path="res://EditQuestionProject/scripts_EditQuestionProject/single_entry_2.gd" id="3_wrx3f"]
[ext_resource type="Script" path="res://EditQuestionProject/scripts_EditQuestionProject/single_entry_3.gd" id="4_vvi8f"]

[node name="single_page_of_questions" type="Node2D"]
script = ExtResource("1_75lnj")

[node name="first_section_outline" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(625, 210)
offset_left = 35.0
offset_right = 785.0
offset_bottom = 210.0
border_color = Color(0.466667, 0.556863, 0.552941, 1)
editor_only = false

[node name="second_section_outline" type="ReferenceRect" parent="."]
custom_minimum_size = Vector2(750, 210)
offset_left = 35.0
offset_top = 210.0
offset_right = 660.0
offset_bottom = 440.0
border_color = Color(0.466667, 0.556863, 0.552941, 1)
editor_only = false

[node name="third_section_outline" type="ReferenceRect" parent="."]
offset_left = 35.0
offset_top = 440.0
offset_right = 785.0
offset_bottom = 650.0
border_color = Color(0.466667, 0.556863, 0.552941, 1)
editor_only = false

[node name="first_section" type="Control" parent="."]
custom_minimum_size = Vector2(750, 0)
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_right = 660.0
offset_bottom = 210.0

[node name="second_section" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_top = 210.0
offset_right = 785.0
offset_bottom = 440.0

[node name="third_section" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_top = 440.0
offset_right = 785.0
offset_bottom = 650.0

[node name="single_entry_1" parent="." instance=ExtResource("1_dlrke")]
position = Vector2(60, 10)
script = ExtResource("2_gmfig")

[node name="single_entry_2" parent="." instance=ExtResource("1_dlrke")]
position = Vector2(59, 239)
script = ExtResource("3_wrx3f")

[node name="single_entry_3" parent="." instance=ExtResource("1_dlrke")]
position = Vector2(59, 462)
script = ExtResource("4_vvi8f")

[node name="page_navigation" parent="." instance=ExtResource("2_ce1rw")]
position = Vector2(900, 100)

[node name="warning_dialog" type="AcceptDialog" parent="."]
position = Vector2i(330, 276)

[connection signal="mouse_entered" from="first_section" to="single_entry_1" method="_on_first_section_mouse_entered"]
[connection signal="mouse_entered" from="second_section" to="single_entry_2" method="_on_second_section_mouse_entered"]
[connection signal="mouse_entered" from="third_section" to="single_entry_3" method="_on_third_section_mouse_entered"]
